[package]
name = "rustyfetch-cli"
version = "0.1.0"
edition = "2021"
description = "A minimal and aesthetic system fetch tool written in Rust 🦀"
license = "MIT"
repository = "https://github.com/Tanishhhq-codes/rustyfetch"
homepage = "https://github.com/Tanishhhq-codes/rustyfetch"
readme = "README.md"
keywords = ["cli", "fetch", "system", "linux"]
categories = ["command-line-utilities"]

[dependencies]
sysinfo = "0.38.4"
colored = "3.1.1"
whoami = "2.1.1"